--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j:8.0.33'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.1'
     implementation 'org.mindrot:jbcrypt:0.4'
+    implementation 'com.amazonaws:aws-java-sdk:1.12.694'
 }
 
 tasks.named('test') {
