--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.1'
     implementation 'org.mindrot:jbcrypt:0.4'
     implementation 'com.amazonaws:aws-java-sdk:1.12.694'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.4'
 }
 
 tasks.named('test') {
