--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.mindrot:jbcrypt:0.4'
     implementation 'com.amazonaws:aws-java-sdk:1.12.276'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.4'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
 
 tasks.named('test') {
